completed functionality just need to put some more circuit tiles for new random map

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -13,7 +13,7 @@
   <main>
   </main>
   <script type="module">
-    import { setup, preload } from "./js/index.js"
+    import { setup, preload } from "./js/drawBoard.js"
     window.preload = preload;
     window.setup = setup;
   </script>
